--- a/precastr/controller/home/cell/HomeTextPostTableViewCell.xib
+++ b/precastr/controller/home/cell/HomeTextPostTableViewCell.xib
@@ -27,9 +27,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="382" height="399.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="account" translatesAutoresizingMaskIntoConstraints="NO" id="l5B-ie-dfL">
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="l5B-ie-dfL">
                         <rect key="frame" x="16" y="8" width="40" height="40"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.16090539383561644" colorSpace="custom" customColorSpace="sRGB"/>
                     </imageView>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y4W-yS-wtT">
                         <rect key="frame" x="64" y="16" width="34" height="25"/>
@@ -116,9 +117,9 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="account" width="18" height="18"/>
         <image name="approved" width="15" height="15"/>
         <image name="facebook-group" width="15" height="15"/>
+        <image name="profile" width="24" height="24"/>
         <image name="twitter-group" width="15" height="15"/>
     </resources>
 </document>
