updated for all screen fonts and spacing as well as new screens

--- a/precastr/controller/guest/cells/SignupScreenTableViewCell.xib
+++ b/precastr/controller/guest/cells/SignupScreenTableViewCell.xib
@@ -89,7 +89,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BrL-tV-yWv">
                                         <rect key="frame" x="3" y="0.0" width="22" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <action selector="agreeCheckboxBtnClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="is7-hM-P9Q"/>
                                         </connections>
